// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TimeBasedLineChart /> Renders the TimeBasedLineChart with 2 lines and without gradient 1`] = `
<BaseLineChart
  data={
    Array [
      Object {
        "dataset": Array [
          Object {
            "x": "2018-05-08T04:40:09.000Z",
            "y": "100",
          },
          Object {
            "x": "2018-02-06T22:56:37.000Z",
            "y": "150",
          },
          Object {
            "x": "2017-11-06T22:46:59.000Z",
            "y": "150",
          },
          Object {
            "x": "2017-07-31T23:42:42.000Z",
            "y": "150",
          },
          Object {
            "x": "2017-05-04T00:00:00.000Z",
            "y": "100",
          },
          Object {
            "x": "2017-02-01T02:40:16.000Z",
            "y": "200",
          },
          Object {
            "x": "2016-11-02T00:00:00.000Z",
            "y": "150",
          },
          Object {
            "x": "2016-10-07T22:57:39.000Z",
            "y": "150",
          },
          Object {
            "x": "2016-08-10T23:27:11.000Z",
            "y": "100",
          },
        ],
        "datasetLabel": "Productivity",
        "lineColor": "rgb(67, 45, 243)",
      },
      Object {
        "dataset": Array [
          Object {
            "x": "2018-02-20T23:53:42.000Z",
            "y": "150",
          },
          Object {
            "x": "2017-11-06T22:48:34.000Z",
            "y": "50",
          },
          Object {
            "x": "2017-05-05T00:00:00.000Z",
            "y": "150",
          },
          Object {
            "x": "2017-01-31T00:00:00.000Z",
            "y": "100",
          },
          Object {
            "x": "2016-11-03T00:00:00.000Z",
            "y": "150",
          },
          Object {
            "x": "2016-10-10T00:57:21.000Z",
            "y": "150",
          },
        ],
        "datasetLabel": "Productivity",
        "lineColor": "rgb(3, 222, 235)",
      },
    ]
  }
  datasets={
    Array [
      Object {
        "backgroundColor": "rgb(67, 45, 243)",
        "borderColor": "rgb(67, 45, 243)",
        "borderWidth": 4,
        "data": Array [
          Object {
            "x": "2018-05-08T04:40:09.000Z",
            "y": "100",
          },
          Object {
            "x": "2018-02-06T22:56:37.000Z",
            "y": "150",
          },
          Object {
            "x": "2017-11-06T22:46:59.000Z",
            "y": "150",
          },
          Object {
            "x": "2017-07-31T23:42:42.000Z",
            "y": "150",
          },
          Object {
            "x": "2017-05-04T00:00:00.000Z",
            "y": "100",
          },
          Object {
            "x": "2017-02-01T02:40:16.000Z",
            "y": "200",
          },
          Object {
            "x": "2016-11-02T00:00:00.000Z",
            "y": "150",
          },
          Object {
            "x": "2016-10-07T22:57:39.000Z",
            "y": "150",
          },
          Object {
            "x": "2016-08-10T23:27:11.000Z",
            "y": "100",
          },
        ],
        "fill": false,
        "label": "Productivity",
        "lineTension": 0,
        "pointBackgroundColor": "rgb(67, 45, 243)",
        "pointBorderColor": "rgb(67, 45, 243)",
        "pointBorderWidth": 1,
        "pointHitRadius": 10,
        "pointHoverBackgroundColor": "rgb(67, 45, 243)",
        "pointHoverRadius": 5,
        "pointRadius": 4,
      },
      Object {
        "backgroundColor": "rgb(3, 222, 235)",
        "borderColor": "rgb(3, 222, 235)",
        "borderWidth": 4,
        "data": Array [
          Object {
            "x": "2018-02-20T23:53:42.000Z",
            "y": "150",
          },
          Object {
            "x": "2017-11-06T22:48:34.000Z",
            "y": "50",
          },
          Object {
            "x": "2017-05-05T00:00:00.000Z",
            "y": "150",
          },
          Object {
            "x": "2017-01-31T00:00:00.000Z",
            "y": "100",
          },
          Object {
            "x": "2016-11-03T00:00:00.000Z",
            "y": "150",
          },
          Object {
            "x": "2016-10-10T00:57:21.000Z",
            "y": "150",
          },
        ],
        "fill": false,
        "label": "Productivity",
        "lineTension": 0,
        "pointBackgroundColor": "rgb(3, 222, 235)",
        "pointBorderColor": "rgb(3, 222, 235)",
        "pointBorderWidth": 1,
        "pointHitRadius": 10,
        "pointHoverBackgroundColor": "rgb(3, 222, 235)",
        "pointHoverRadius": 5,
        "pointRadius": 4,
      },
    ]
  }
  dateFormat="DD/MM/YYYY"
  maxYTick={300}
  minYTick={0}
  options={
    Object {
      "layout": Object {
        "padding": Object {
          "bottom": 10,
          "left": 10,
          "right": 10,
          "top": 10,
        },
      },
      "maintainAspectRatio": false,
      "scales": Object {
        "xAxes": Array [
          Object {
            "gridLines": Object {
              "display": true,
            },
            "ticks": Object {
              "display": true,
            },
            "time": Object {
              "displayFormats": Object {
                "month": "MMM",
              },
              "parser": "DD/MM/YYYY",
              "tooltipFormat": "ll",
              "unit": "month",
            },
            "type": "time",
          },
        ],
        "yAxes": Array [
          Object {
            "fontSize": "8px",
            "gridLines": Object {
              "drawBorder": true,
            },
            "ticks": Object {
              "callback": [Function],
              "display": true,
              "stepSize": 20,
              "suggestedMax": 300,
              "suggestedMin": 0,
            },
          },
        ],
      },
      "tooltips": Object {
        "callbacks": Object {
          "label": [Function],
        },
      },
    }
  }
  showXGridLines={true}
  showXTicks={true}
  showYTicks={true}
  timeDisplayFormat="MMM"
  timeToolTipFormat="ll"
  timeUnit="month"
  yTickStepSize={20}
/>
`;

exports[`<TimeBasedLineChart /> Renders the TimeBasedLineChart with gradient 1`] = `
<BaseLineChart
  data={
    Array [
      Object {
        "backgroundColor": Object {
          "addColorStop": [Function],
        },
        "dataset": Array [
          Object {
            "x": "2018-05-08T05:06:52.000Z",
            "y": "6",
          },
          Object {
            "x": "2018-05-08T04:40:09.000Z",
            "y": "6",
          },
          Object {
            "x": "2018-04-30T06:27:46.000Z",
            "y": "7",
          },
          Object {
            "x": "2018-04-04T04:18:03.000Z",
            "y": "6",
          },
          Object {
            "x": "2018-02-20T23:52:54.000Z",
            "y": "6",
          },
          Object {
            "x": "2018-02-06T22:56:37.000Z",
            "y": "6",
          },
          Object {
            "x": "2018-01-08T22:40:42.000Z",
            "y": "6",
          },
          Object {
            "x": "2017-12-21T05:18:47.000Z",
            "y": "6",
          },
          Object {
            "x": "2017-11-06T22:55:53.000Z",
            "y": "5",
          },
          Object {
            "x": "2017-11-06T22:46:59.000Z",
            "y": "6",
          },
          Object {
            "x": "2017-11-01T22:29:39.000Z",
            "y": "8",
          },
          Object {
            "x": "2017-10-29T23:25:25.000Z",
            "y": "5",
          },
          Object {
            "x": "2017-10-03T06:39:48.000Z",
            "y": "8",
          },
          Object {
            "x": "2017-07-31T23:42:42.000Z",
            "y": "8",
          },
          Object {
            "x": "2017-07-16T23:35:50.000Z",
            "y": "8",
          },
          Object {
            "x": "2017-06-19T05:13:43.000Z",
            "y": "6",
          },
          Object {
            "x": "2017-05-22T09:40:52.000Z",
            "y": "7",
          },
          Object {
            "x": "2017-05-04T00:00:00.000Z",
            "y": "7",
          },
          Object {
            "x": "2017-05-04T00:00:00.000Z",
            "y": "8",
          },
          Object {
            "x": "2017-04-06T00:00:00.000Z",
            "y": "8",
          },
          Object {
            "x": "2017-03-04T00:00:00.000Z",
            "y": "9",
          },
          Object {
            "x": "2017-02-01T02:40:16.000Z",
            "y": "9",
          },
          Object {
            "x": "2016-11-02T00:00:00.000Z",
            "y": "8",
          },
          Object {
            "x": "2016-10-09T08:57:51.000Z",
            "y": "8",
          },
          Object {
            "x": "2016-10-09T08:44:22.000Z",
            "y": "7",
          },
          Object {
            "x": "2016-10-08T21:39:19.000Z",
            "y": "7",
          },
          Object {
            "x": "2016-10-07T22:57:39.000Z",
            "y": "8",
          },
          Object {
            "x": "2016-09-10T23:32:39.000Z",
            "y": "9",
          },
          Object {
            "x": "2016-08-10T23:27:11.000Z",
            "y": "10",
          },
          Object {
            "x": "2016-08-01T06:54:48.000Z",
            "y": "9",
          },
          Object {
            "x": "2016-07-29T01:22:16.000Z",
            "y": "9",
          },
          Object {
            "x": "2016-07-10T23:28:31.000Z",
            "y": "5",
          },
        ],
        "datasetLabel": "Happiness Rating",
        "isGradient": true,
        "lineColor": "rgb(67, 45, 243)",
      },
    ]
  }
  datasets={
    Array [
      Object {
        "backgroundColor": Object {
          "addColorStop": [Function],
        },
        "borderColor": "rgb(67, 45, 243)",
        "borderWidth": 4,
        "colour": "rgb(67, 45, 243)",
        "data": Array [
          Object {
            "x": "2018-05-08T05:06:52.000Z",
            "y": "6",
          },
          Object {
            "x": "2018-05-08T04:40:09.000Z",
            "y": "6",
          },
          Object {
            "x": "2018-04-30T06:27:46.000Z",
            "y": "7",
          },
          Object {
            "x": "2018-04-04T04:18:03.000Z",
            "y": "6",
          },
          Object {
            "x": "2018-02-20T23:52:54.000Z",
            "y": "6",
          },
          Object {
            "x": "2018-02-06T22:56:37.000Z",
            "y": "6",
          },
          Object {
            "x": "2018-01-08T22:40:42.000Z",
            "y": "6",
          },
          Object {
            "x": "2017-12-21T05:18:47.000Z",
            "y": "6",
          },
          Object {
            "x": "2017-11-06T22:55:53.000Z",
            "y": "5",
          },
          Object {
            "x": "2017-11-06T22:46:59.000Z",
            "y": "6",
          },
          Object {
            "x": "2017-11-01T22:29:39.000Z",
            "y": "8",
          },
          Object {
            "x": "2017-10-29T23:25:25.000Z",
            "y": "5",
          },
          Object {
            "x": "2017-10-03T06:39:48.000Z",
            "y": "8",
          },
          Object {
            "x": "2017-07-31T23:42:42.000Z",
            "y": "8",
          },
          Object {
            "x": "2017-07-16T23:35:50.000Z",
            "y": "8",
          },
          Object {
            "x": "2017-06-19T05:13:43.000Z",
            "y": "6",
          },
          Object {
            "x": "2017-05-22T09:40:52.000Z",
            "y": "7",
          },
          Object {
            "x": "2017-05-04T00:00:00.000Z",
            "y": "7",
          },
          Object {
            "x": "2017-05-04T00:00:00.000Z",
            "y": "8",
          },
          Object {
            "x": "2017-04-06T00:00:00.000Z",
            "y": "8",
          },
          Object {
            "x": "2017-03-04T00:00:00.000Z",
            "y": "9",
          },
          Object {
            "x": "2017-02-01T02:40:16.000Z",
            "y": "9",
          },
          Object {
            "x": "2016-11-02T00:00:00.000Z",
            "y": "8",
          },
          Object {
            "x": "2016-10-09T08:57:51.000Z",
            "y": "8",
          },
          Object {
            "x": "2016-10-09T08:44:22.000Z",
            "y": "7",
          },
          Object {
            "x": "2016-10-08T21:39:19.000Z",
            "y": "7",
          },
          Object {
            "x": "2016-10-07T22:57:39.000Z",
            "y": "8",
          },
          Object {
            "x": "2016-09-10T23:32:39.000Z",
            "y": "9",
          },
          Object {
            "x": "2016-08-10T23:27:11.000Z",
            "y": "10",
          },
          Object {
            "x": "2016-08-01T06:54:48.000Z",
            "y": "9",
          },
          Object {
            "x": "2016-07-29T01:22:16.000Z",
            "y": "9",
          },
          Object {
            "x": "2016-07-10T23:28:31.000Z",
            "y": "5",
          },
        ],
        "fill": true,
        "fillColor": "rgb(67, 45, 243)",
        "label": "Happiness Rating",
        "lineTension": 0,
        "pointBackgroundColor": "rgb(67, 45, 243)",
        "pointBorderColor": "rgb(67, 45, 243)",
        "pointBorderWidth": 1,
        "pointHitRadius": 10,
        "pointHoverBackgroundColor": "rgb(67, 45, 243)",
        "pointHoverRadius": 5,
        "pointRadius": 4,
      },
    ]
  }
  dateFormat="DD/MM/YYYY"
  maxYTick={10}
  minYTick={0}
  options={
    Object {
      "layout": Object {
        "padding": Object {
          "bottom": 10,
          "left": 10,
          "right": 10,
          "top": 10,
        },
      },
      "maintainAspectRatio": false,
      "scales": Object {
        "xAxes": Array [
          Object {
            "gridLines": Object {
              "display": true,
            },
            "ticks": Object {
              "display": true,
            },
            "time": Object {
              "displayFormats": Object {
                "month": "MMM",
              },
              "parser": "DD/MM/YYYY",
              "tooltipFormat": "ll",
              "unit": "month",
            },
            "type": "time",
          },
        ],
        "yAxes": Array [
          Object {
            "fontSize": "8px",
            "gridLines": Object {
              "drawBorder": true,
            },
            "ticks": Object {
              "callback": [Function],
              "display": true,
              "stepSize": 1,
              "suggestedMax": 10,
              "suggestedMin": 0,
            },
          },
        ],
      },
      "tooltips": Object {
        "callbacks": Object {
          "label": [Function],
        },
      },
    }
  }
  showXGridLines={true}
  showXTicks={true}
  showYTicks={true}
  timeDisplayFormat="MMM"
  timeToolTipFormat="ll"
  timeUnit="month"
  yTickStepSize={1}
/>
`;
